kube.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: upacrav

---
# Site 1
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upacrav
  namespace: upacrav
spec:
  replicas: 1
  selector:
    matchLabels:
      app: upacrav
  template:
    metadata:
      labels:
        app: upacrav
    spec:
      containers:
      - name: upacrav
        image: harbor.ramola.top/img/upacrav:latest
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: upacrav-service
  namespace: upacrav
spec:
  selector:
    app: upacrav
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: upacrav-ingress
  namespace: upacrav
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: upacrav.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: upacrav-service
            port:
              number: 80

  - host: www.upacrav.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: upacrav-service
            port:
              number: 80
